--- a/app2/tsconfig.json
+++ b/app2/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": ["dom", "dom.iterable", "esnext","ES5", "ES2015", "ES2016", "DOM", "ES2015.Promise"],
     "baseUrl": "./",
     "allowJs": true,
     "skipLibCheck": true,
