--- a/app2/package.json
+++ b/app2/package.json
@@ -9,7 +9,7 @@
 		"html-webpack-plugin": "5.3.1 ",
 		"serve": "11.3.2",
 		"ts-loader": "^9.1.2",
-		"typescript": "^4.2.4",
+		"typescript": "4.7.4",
 		"webpack": "^5.67.0",
 		"webpack-cli": "^4.9.2",
 		"webpack-dev-server": "^4.7.3"
